@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-04-08T01:20:57Z",
+  "timestamp" : "2022-04-09T16:23:50Z",
   "count_outdated" : 1158,
   "uniques_outdated" : 302,
-  "count" : 1770,
-  "uniques" : 328,
+  "count" : 1771,
+  "uniques" : 329,
   "clones" : [
     {
       "timestamp": "2022-03-27T00:00:00Z",
@@ -60,6 +60,13 @@
       "count_minmax": [ 1, 27 ],
       "uniques": 6,
       "uniques_minmax": [ 1, 6 ]
+    },
+    {
+      "timestamp": "2022-04-09T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
