@@ -1,5 +1,5 @@
 {
-  "count": 612,
+  "count": 613,
   "uniques": 18,
   "clones": [
     {
@@ -41,6 +41,11 @@
       "timestamp": "2022-04-07T00:00:00Z",
       "count": 27,
       "uniques": 6
+    },
+    {
+      "timestamp": "2022-04-09T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
